fix overflow for inner-service

--- a/app/assets/stylesheets/templatemo_style.css
+++ b/app/assets/stylesheets/templatemo_style.css
@@ -467,6 +467,8 @@ a.toggle-menu {
   padding: 5%;
   margin-top:20px;
   text-align:right;
+  height:95%;
+  overflow-y:scroll
 }
 .service-item .service-content h3 {
   font-size: 18px;
